--- a/apicius-frontend/src/styles/recipeDetailed.css
+++ b/apicius-frontend/src/styles/recipeDetailed.css
@@ -185,6 +185,31 @@ h3 {
     text-align: right;
 }
 
+.recipe-actions {
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 1rem;
+  }
+  
+  .add-to-cart-btn {
+    position: absolute;
+    top: 1rem;
+    right: 13rem;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    margin-top: 4rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+  
+  .add-to-cart-btn:hover {
+    background-color: #218838;
+  }  
+
 .edit-recipe-btn {
     position: absolute;
     top: 1rem;
